--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,16 +1,18 @@
+[toolchain]
+
 [features]
 seeds = false
 skip-lint = false
 
-[programs.devnet]
-todo_list_app = "<ADD YOUR ADDRESS HERE>"
+[programs.localnet]
+todo_list_app = "ByQxGL64kgf8tuUxgDYKYTcLUTKcFZRB9tLaK85WJedD"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
-wallet = "~/.config/solana/id.json"
+cluster = "Localnet"
+wallet = "/home/shifu/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
